import mongoose from 'mongoose';
import { SYSTEM_PERMISSIONS } from '../constants.js';

const roleSchema = new mongoose.Schema(
  {
    name: {
      type: String,
      required: [true, 'Role name is required'],
      unique: true,
      trim: true,
    },
    permissions: {
      type: [String],
      enum: Object.values(SYSTEM_PERMISSIONS),
      default: [],
    },
    isActive: {
      type: Boolean,
      default: true,
    },
  },
  { timestamps: true }
);

const Role = mongoose.model('Role', roleSchema);

// High-performance indexes for role queries
roleSchema.index({ isActive: 1 });

export default Role;
